[tool.poetry]
name = "growth-job-pipeline"
version = "0.1.0"
description = "A data pipeline to integrate growth temperatures with growth run and yield data"
authors = ["Del Middlemiss <derekmiddlemiss@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.4.0"
pyodbc = "^4.0.39"
python-decouple = "^3.8"
backoff = "^2.2.1"
requests = "^2.31.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
pre-commit = "^3.4.0"
coverage = "^7.3.1"

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.poetry_bumpversion.file."src/__init__.py"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
