[tool.poetry]
name = "growth-job-pipeline"
version = "0.1.5"
description = "A data pipeline to integrate growth temperatures with growth run and yield data"
authors = ["Del Middlemiss <derekmiddlemiss@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.5.1"
pyodbc = "^5.0.1"
python-decouple = "^3.8"
backoff = "^2.2.1"
requests = "^2.31.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pre-commit = "^3.5.0"
pytest-mock = "^3.12.0"
pytest-cov = "^4.1.0"
pytest-responsemock = "^1.1.1"
flake8 = "^6.1.0"

[tool.black]
line-length = 79
experimental-string-processing = true
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.poetry_bumpversion.file."growth_job_pipeline/__init__.py"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
